src/test/deca/context/valid/sansobjet/calculs.deca
// Description : Suite de calculs
// Resultat : fonctionnels

{
    int x = 5;
    float y = 2.5;
    x = x + y;
    y = y / 2;
    y = y * 2;
    x = 5 % 3;
    x = -x;
    y = y - 2;
    boolean pos = x > 0;
    pos = !pos;
}